<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".takephoto.TakePhotoActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_bar_background"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/take_photo_title"
                android:textColor="@color/dark_text"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:padding="8dp"
                android:src="@mipmap/ic_launcher" />

        </androidx.appcompat.widget.Toolbar>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:tintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#6F000000"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="277dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:hint="@string/hint_select_a_habit"
                    android:layout_marginBottom="100dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/takePhotoButton"
                    android:layout_width="277dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:text="@string/no_habit_found"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:layout_marginBottom="100dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"

                    >

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/uploading_your_photo_to_the_cloud"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/progressLoader"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        android:layout_margin="1dp"

                        android:gravity="center"
                        android:visibility="gone" />
                </LinearLayout>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressBackgroundTint="@color/white"
                    android:progressTint="@color/bell_yellow"
                    android:visibility="gone"
                    android:numStars="5"
                    android:stepSize="1" />

                <Button
                    android:id="@+id/backHomeButton"
                    android:layout_width="277dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:text="@string/go_back_to_home"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:enabled="false"
                    />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="@color/drawer_background"
        android:drawablePadding="50dp"
        android:fitsSystemWindows="true"
        app:drawerLayoutCornerSize="20dp"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/dark_text"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>


