...
    <string name="coaching">Coaching</string>
    <string name="requests">Requests</string>
    <string name="offers">Offers</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="uploading_your_photo_to_the_cloud">Uploading</string>
    <string name="go_back_to_home">Go back to home</string>
    <string name="no_habit_found">No habits found</string>
    <string name="select_a_habit">Please select a habit</string>
    <string name="done">Done!</string>
    <string name="hint_select_a_habit">Select a habit</string>
    <string name="rank">\"Rank \"</string>
    <string name="as_a_trainer">\" as a trainer\"</string>
    <string name="there_was_an_error">There was an error</string>
...
