<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_greet"
            android:icon="@drawable/ic_greet"
            android:title="Greet"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="Calendar" />
        <item
            android:id="@+id/nav_pictures"
            android:icon="@drawable/ic_pictures"
            android:title="Pictures" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="Settings" />
        <item
            android:id="@+id/nav_habits"
            android:icon="@drawable/ic_upload"
            android:title="Upload a habit" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_label"
                android:icon="@drawable/ic_label"
                android:title="Label" />
        </menu>
    </item>

</menu>